change readme file

--- a/src/auth.html
+++ b/src/auth.html
@@ -51,7 +51,7 @@
           <div class="errors"></div>
           <label for="pass" class="form__pass-title title">Пароль:</label>
           <input
-            type="text"
+            type="password"
             class="form__pass input js-input"
             id="pass"
             name="operatorPassword"
