--- a/src/index.html
+++ b/src/index.html
@@ -554,6 +554,9 @@
           </div>
         </div>
         <!-- Form section end -->
+
+        <div class="follow-cursor"></div>
+        <!-- элемент, который следует за курсором -->
       </main>
       <!-- Main end -->
 
