change directories of files

--- a/src/index.html
+++ b/src/index.html
@@ -9,31 +9,31 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/img/favicon/apple-touch-icon.png"
+      href="assets/img/favicon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/img/favicon/favicon-32x32.png"
+      href="assets/img/favicon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/img/favicon/favicon-16x16.png"
+      href="assets/img/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./assets/img/favicon/site.webmanifest" />
+    <link rel="manifest" href="assets/img/favicon/site.webmanifest" />
     <link
       rel="mask-icon"
-      href="./assets/img/favicon/safari-pinned-tab.svg"
+      href="assets/img/favicon/safari-pinned-tab.svg"
       color="#00aba9"
     />
-    <link rel="shortcut icon" href="./assets/img/favicon/favicon.ico" />
+    <link rel="shortcut icon" href="assets/img/favicon/favicon.ico" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta
       name="msapplication-config"
-      content="./assets/img/favicon/browserconfig.xml"
+      content="assets/img/favicon/browserconfig.xml"
     />
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="" />
@@ -112,7 +112,7 @@
                 class="sunflower__wrap-lg-1 _anim-items _anim-show _anim-no-hide"
               >
                 <img
-                  src="./assets/img/sunflower_1.jpg"
+                  src="assets/img/sunflower_1.jpg"
                   alt="#"
                   class="sunflower__row_1 lg-pic"
                 />
@@ -121,7 +121,7 @@
                 class="sunflower__wrap-sm-2 _anim-items _anim-show _anim-no-hide"
               >
                 <img
-                  src="./assets/img/sunflower_2.jpg"
+                  src="assets/img/sunflower_2.jpg"
                   alt="#"
                   class="sunflower__row_2 sm-pic"
                 />
@@ -130,7 +130,7 @@
                 class="sunflower__wrap-sm-3 _anim-items _anim-show _anim-no-hide"
               >
                 <img
-                  src="./assets/img/sunflower_3.jpg"
+                  src="assets/img/sunflower_3.jpg"
                   alt="#"
                   class="sunflower__row_3 sm-pic"
                 />
@@ -139,7 +139,7 @@
                 class="sunflower__wrap-sm-4 _anim-items _anim-show _anim-no-hide"
               >
                 <img
-                  src="./assets/img/sunflower_4.jpg"
+                  src="assets/img/sunflower_4.jpg"
                   alt="#"
                   class="sunflower__row_4 sm-pic"
                 />
@@ -148,7 +148,7 @@
                 class="sunflower__wrap-sm-5 _anim-items _anim-show _anim-no-hide"
               >
                 <img
-                  src="./assets/img/sunflower_5.jpg"
+                  src="assets/img/sunflower_5.jpg"
                   alt="#"
                   class="sunflower__row_5 sm-pic"
                 />
@@ -157,7 +157,7 @@
                 class="sunflower__wrap-lg-6 _anim-items _anim-show _anim-no-hide"
               >
                 <img
-                  src="./assets/img/sunflower_6.jpg"
+                  src="assets/img/sunflower_6.jpg"
                   alt="#"
                   class="sunflower__row_6 lg-pic"
                 />
@@ -184,10 +184,7 @@
               <div class="life__column_p">
                 <div class="life__column_p-port">
                   <a target="_blank" href="https://artchive.ru/vincentvangogh">
-                    <img
-                      src="./assets/img/vincent.jpg"
-                      alt="Vincent Van Gogh"
-                    />
+                    <img src="assets/img/vincent.jpg" alt="Vincent Van Gogh" />
                   </a>
                 </div>
               </div>
@@ -200,10 +197,7 @@
         <div class="facts">
           <div class="facts__container">
             <video loop="" muted="" autoplay="" class="video__bg">
-              <source
-                src="./assets/img/video/starryNight.mp4"
-                type="video/mp4"
-              />
+              <source src="assets/img/video/starryNight.mp4" type="video/mp4" />
             </video>
             <div class="facts__row">
               <div class="facts__title">4 факта о жизни Винсента Ван Гога</div>
@@ -211,7 +205,7 @@
               <!-- Первый факт -->
               <div class="facts__life">
                 <div class="facts__life-pic facts_pic">
-                  <img src="./assets/img/hospital.png" alt="Life" />
+                  <img src="assets/img/hospital.png" alt="Life" />
                 </div>
                 <div class="facts__life-title facts_title">Жизнь</div>
                 <div class="facts__life-subtitle">
@@ -225,7 +219,7 @@
               <!-- Второй факт -->
               <div class="facts__teo">
                 <div class="facts__teo-pic facts_pic">
-                  <img src="./assets/img/brothers.png" alt="Brother" />
+                  <img src="assets/img/brothers.png" alt="Brother" />
                 </div>
                 <div class="facts__teo-title facts_title">Тео Ван Гог</div>
                 <div class="facts__teo-subtitle">
@@ -239,7 +233,7 @@
               <!-- Третий факт -->
               <div class="facts__death">
                 <div class="facts__death-pic facts_pic">
-                  <img src="./assets/img/tomb.png" alt="Death" />
+                  <img src="assets/img/tomb.png" alt="Death" />
                 </div>
                 <div class="facts__feath-title facts_title">Смерть</div>
                 <div class="facts__death-subtitle">
@@ -251,7 +245,7 @@
               <!-- Четвертый факт -->
               <div class="facts__legacy">
                 <div class="facts__legacy-pic facts_pic">
-                  <img src="./assets/img/painting.png" alt="Legacy" />
+                  <img src="assets/img/painting.png" alt="Legacy" />
                 </div>
                 <div class="facts__legacy-title facts_title">Наследие</div>
                 <div class="facts__legacy-subtitle">
@@ -269,7 +263,7 @@
           <div class="slider__container">
             <div class="slider__row">
               <div class="slider__pic">
-                <img src="./assets/img/quotation-mark.png" alt="Quote" />
+                <img src="assets/img/quotation-mark.png" alt="Quote" />
               </div>
 
               <div class="slider__items">
@@ -323,7 +317,7 @@
               </div>
 
               <form
-                action="./php/action.php"
+                action="php/action.php"
                 class="queue__form js-form"
                 method="post"
                 id="contact"
@@ -567,7 +561,7 @@
             <div class="footer__logo logo">
               <a href="index.html" class="footer__company_link">
                 <img
-                  src="./assets/img/logo.png"
+                  src="assets/img/logo.png"
                   alt="company-logo"
                   class="footer__logo_pic logo__pic"
                 />
