--- a/src/auth.html
+++ b/src/auth.html
@@ -10,27 +10,27 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="./assets/img/icon/apple-touch-icon.png"
+      href="assets/img/icon/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/img/icon/favicon-32x32.png"
+      href="assets/img/icon/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./assets/img/favicon/icon-16x16.png"
+      href="assets/img/favicon/icon-16x16.png"
     />
-    <link rel="manifest" href="./assets/img/icon/site.webmanifest" />
+    <link rel="manifest" href="assets/img/icon/site.webmanifest" />
     <link
       rel="mask-icon"
-      href="./assets/img/icon/safari-pinned-tab.svg"
+      href="assets/img/icon/safari-pinned-tab.svg"
       color="#00aba9"
     />
-    <link rel="shortcut icon" href="./assets/img/icon/favicon.ico" />
+    <link rel="shortcut icon" href="assets/img/icon/favicon.ico" />
   </head>
   <body>
     <div class="form">
@@ -39,7 +39,7 @@
           <div class="wrap"></div>
         </div>
 
-        <form class="form-auth" method="post" action="./php/auth.php">
+        <form class="form-auth" method="post" action="php/auth.php">
           <div class="form__title">Авторизация оператора</div>
           <label for="login" class="form__login-title title">Логин:</label>
           <input
